--- a/产品功能设计报告.md
+++ b/产品功能设计报告.md
@@ -1,4 +1,4 @@
-# 产品功能设计报告
+# 产品功能设计报告（第一次报告）
 
 项目名称：Telegram chatting Room
 
@@ -6,7 +6,7 @@
 
 相关文档：
 
-版权所有：
+版权所有：相信光的CS209 group2
 
 修改记录：
 
@@ -29,6 +29,8 @@
 
 
 ## 1.简介
+
+​      这是一个基于局域网的聊天室客户端，用于连接同一个局域网内的独立IP用户，通过创建聊天室进行信息的交互，包括文本，图像，视频。
 
 ### 1.1目的
 
