Completion of the brief, the first draft of the functional design part of the product (excluding images). YU

--- a/产品功能设计报告.md
+++ b/产品功能设计报告.md
@@ -1,22 +1,22 @@
 # 产品功能设计报告（第一次报告）
 
-项目名称：Telegram chatting Room
+**项目名称**：Telegram chatting Room
 
-摘要：
+**摘要**：本文档系统阐述使一台Windows客户端实现一个网络聊天室的开发过程。首先介绍了网络聊天室的基本功能需求，包括用户登录、创建/加入聊天室、消息发送接收等功能。接着详细介绍了在开发过程中所遇到的设计约束条件，如安全性、稳定性、扩展性等方面的考虑。最后，本文档作为将来  和验收的标准，对网络聊天室的功能完整性、性能表现、用户体验等方面提出了具体要求和评估标准。
 
-相关文档：
+**相关文档**：
 
-版权所有：相信光的CS209 group2
+**版权所有**：相信光的CS209 group2
 
-修改记录：
+**修改记录**：
 
-|  日期   | 版本 |   说明   | 作者 |
-| :-----: | :--: | :------: | :--: |
-| 4月12日 | V1.0 | 报告模版 | 王卓 |
-|         |      |          |      |
-|         |      |          |      |
-|         |      |          |      |
-|         |      |          |      |
+|  日期  | 版本 |         说明         |         作者         |
+| :----: | :--: | :------------------: | :------------------: |
+| 未完成 | V1.0 | 初版产品功能设计设想 | 相信光的CS209 group2 |
+|        |      |                      |                      |
+|        |      |                      |                      |
+|        |      |                      |                      |
+|        |      |                      |                      |
 
 
 
@@ -30,15 +30,23 @@
 
 ## 1.简介
 
-​      这是一个基于局域网的聊天室客户端，用于连接同一个局域网内的独立IP用户，通过创建聊天室进行信息的交互，包括文本，图像，视频。
+这是一个基于局域网的聊天室客户端，用于连接同一个局域网内的独立IP用户，通过创建聊天室进行信息的交互，包括文本，图像，视频。
 
 ### 1.1目的
 
+本文档旨在为《局域网聊天室客户端》提供详细的设计规范。它将涵盖软件在设计和开发过程中所需实现的功能、业务逻辑、用户界面设计、以及系统架构等方面的内容。目的是确保开发团队对项目的需求和目标有清晰的认识，从而保证软件的质量和开发进度。
+
 ### 1.2范围
+
+本文档包含了《局域网聊天室客户端》的全面设计要求，**也许不**包括但不限于软件的功能需求、非功能需求、界面设计、系统架构设计、数据库设计、通信协议、安全性考虑、性能指标、以及测试策略。此外，它还将详细说明通信组件和检查组件的开发内容，包括它们的实现方式、接口定义和验证方法。本文档适用于项目开发团队、项目经理、测试人员以及其他相关利益相关者。
 
 ### 1.3参考资料
 
+无
+
 ## 2.开发背景
+
+无
 
 ## 3.技术业务需求
 
@@ -50,3 +58,42 @@
 
 ## 4.产品功能设计
 
+### 4.1创建或加入聊天室界面
+
+
+
+该界面为聊天室初始界面，包含两个选项：加入聊天室和创建聊天室。
+
+#### 4.1.1创建聊天室
+
+可在输入栏中输入初始化的密码或选择无需密码，点击按钮创建。
+
+
+
+#### 4.1.2加入聊天室
+
+界面存在滚动列表，显示出当前局域网下所有聊天室。可选中某一聊天室，输入密码，点击按钮加入。
+
+
+
+#### 4.1.3设置昵称
+
+创建或加入聊天室后弹出设置昵称界面，在输入栏中输入昵称，若空则随机初始化字符串。点击按钮后进入聊天室界面。
+
+
+
+### 4.2聊天室界面
+
+聊天室界面仿照主流社交软件设计。
+
+主要包括聊天室名称，内容显示框，输入栏，成员列表，退出按钮。
+
+聊天室名称为所有成员均可修改。
+
+内容显示框中由自己发送的消息显示于右侧，他人发送的消息显示于左侧，每一条消息上方显示发送者昵称。
+
+输入栏中可以输入发送文字和图片，也可以点击输入栏上方的图标选择发送音频文件等文件。
+
+成员列表可滚动显示该聊天室所有成员的名单。
+
+点击退出按钮可退出并关闭聊天室界面。
