--- a/产品功能设计报告.md
+++ b/产品功能设计报告.md
@@ -10,13 +10,13 @@
 
 **修改记录**：
 
-|  日期  | 版本 |         说明         |         作者         |
-| :----: | :--: | :------------------: | :------------------: |
-| 未完成 | V1.0 | 初版产品功能设计设想 | 相信光的CS209 group2 |
-|        |      |                      |                      |
-|        |      |                      |                      |
-|        |      |                      |                      |
-|        |      |                      |                      |
+|  日期   | 版本 |         说明         |         作者         |
+| :-----: | :--: | :------------------: | :------------------: |
+| 4月12日 | V1.0 | 初版产品功能设计设想 | 相信光的CS209 group2 |
+|         |      |                      |                      |
+|         |      |                      |                      |
+|         |      |                      |                      |
+|         |      |                      |                      |
 
 
 
@@ -42,35 +42,87 @@
 
 ### 1.3参考资料
 
-无
+​        由于我们准备赋予该软件较为高度的现实使用意义，所以我们在功能开发，UI设计等方面均参考了现如今体量巨大的聊天软件，例如腾讯QQ和Telegram。可以说在功能设计方面，与以上两款软件高度重合，由于仅作为教育意义而开发，所以无抄袭之意，仅作为参考。
 
 ## 2.开发背景
 
-无
+​       仅作为南方科技大学CS209课程小组合作项目开发，将“Telegram chatting Room”作为一款跳出Java框架外的mini客户端设计，采用cpp Qt作为开发框架，并严格按照工业界软件开发标准进行设计的一款局域网聊天软件。其中涉及到局域网IP连接，信息传输，数据库管理等内容。
 
 ## 3.技术业务需求
 
-（用例图）
+本系统主要针对加入局域网内的用户进行用户操作实例展示
 
-### 3.1.（具体功能
+给出如下实例图
 
-#### 3.1.1.细分功能
+![image-20240413002024573](/Users/zhuozhuo/Library/Application Support/typora-user-images/image-20240413002024573.png)
+
+### 3.1.用户账户管理
+
+#### 3.1.1.用户登录
+
+数据流图：
+
+![image-20240413001352033](/Users/zhuozhuo/Library/Application Support/typora-user-images/image-20240413001352033.png)
+
+*业务流程：
+
+1. 在用户打开该软件后，系统打开登陆界面。用户在该界面下填写账户密码。
+2. 用户提交账户密码信息。系统逐项扫描并添加到数据库中。
+3. 身份验证成功后，系统获取用户信息及对应聊天室列表。
+4. 如果登陆失败，系统清空输入栏，用户需要重新输入账户密码信息进行登录。
+
+
+
+#### 3.1.2.用户账户注册
+
+*业务流程：
+
+1. 还没创建账户的用户，可点击登录页面的sign up按键。
+2. 在此页面输入账号和密码并提交。
+3. 系统扫描信息并将其插入到数据库。
+4. 直接以当前创建的账户进行登录。
+
+#### 3.1.3.用户账户注销
+
+*业务流程：
+
+1. 在“Setting”界面，用户可以将界面拉到最底部的“删除用户”并点击。
+2. 用户点击后要求输入密码，系统进行验证。
+3. 一旦验证成功，系统将再次提示“是否删除”。
+4. 当用户确认后，系统将删除用户的所有有关信息，包括关注列表，收藏信息等。
+5. 若取消则返回“Setting”界面。
+
+### 3.2.用户创建或者加入聊天室
+
+#### 3.2.1.用户创建聊天室
+
+#### 3.2.2.用户加入聊天室
+
+### 3.3.聊天室内功能
+
+#### 3.3.1.发送信息
+
+#### 3.3.2.房主禁言/踢出用户
+
+#### 3.3.3.用户收藏信息
 
 ## 4.产品功能设计
 
 ### 4.1创建或加入聊天室界面
 
-
+(初始界面的UI)
 
 该界面为聊天室初始界面，包含两个选项：加入聊天室和创建聊天室。
 
 #### 4.1.1创建聊天室
 
+（创建room时的UI）
+
 可在输入栏中输入初始化的密码或选择无需密码，点击按钮创建。
 
-
-
 #### 4.1.2加入聊天室
+
+（选择聊天室时的UI）
 
 界面存在滚动列表，显示出当前局域网下所有聊天室。可选中某一聊天室，输入密码，点击按钮加入。
 
