--- a/产品功能设计报告.md
+++ b/产品功能设计报告.md
@@ -10,13 +10,13 @@
 
 **修改记录**：
 
-|  日期   | 版本 |         说明         |         作者         |
-| :-----: | :--: | :------------------: | :------------------: |
-| 4月12日 | V1.0 | 初版产品功能设计设想 | 相信光的CS209 group2 |
-|         |      |                      |                      |
-|         |      |                      |                      |
-|         |      |                      |                      |
-|         |      |                      |                      |
+|  日期   | 版本 |         说明         |                 作者                 |
+| :-----: | :--: | :------------------: | :----------------------------------: |
+| 4月12日 | V1.0 | 初版产品功能设计设想 |         相信光的CS209 group2         |
+| 4月13日 | V1.5 |    框架内容的补全    | 痛恨乱闯学校的人类幼崽的CS209 group2 |
+|         |      |                      |                                      |
+|         |      |                      |                                      |
+|         |      |                      |                                      |
 
 
 
@@ -66,45 +66,80 @@
 
 *业务流程：
 
-1. 在用户打开该软件后，系统打开登陆界面。用户在该界面下填写账户密码。
-2. 用户提交账户密码信息。系统逐项扫描并添加到数据库中。
-3. 身份验证成功后，系统获取用户信息及对应聊天室列表。
-4. 如果登陆失败，系统清空输入栏，用户需要重新输入账户密码信息进行登录。
+1. 在用户打开该软件后，系统读取用户的本机IP。
+2. 系统扫描并检查当前数据库中是否存在有这一IP。
+3. 系统查找到IP后，系统获取用户信息及对应聊天室列表。
+4. 如果当前数据库内还没存在有该IP，则将当前IP存储进数据库，随后进入系统主页。
 
 
 
-#### 3.1.2.用户账户注册
-
-*业务流程：
-
-1. 还没创建账户的用户，可点击登录页面的sign up按键。
-2. 在此页面输入账号和密码并提交。
-3. 系统扫描信息并将其插入到数据库。
-4. 直接以当前创建的账户进行登录。
-
-#### 3.1.3.用户账户注销
+#### 3.1.2.用户账户注销
 
 *业务流程：
 
 1. 在“Setting”界面，用户可以将界面拉到最底部的“删除用户”并点击。
-2. 用户点击后要求输入密码，系统进行验证。
-3. 一旦验证成功，系统将再次提示“是否删除”。
-4. 当用户确认后，系统将删除用户的所有有关信息，包括关注列表，收藏信息等。
+2. 系统将再次提示“是否删除”。
+4. 当用户确认后，系统将删除用户的所有有关信息。
 5. 若取消则返回“Setting”界面。
 
 ### 3.2.用户创建或者加入聊天室
 
 #### 3.2.1.用户创建聊天室
 
+*业务流程：
+
+1. 用户可以点击主页内的“创建聊天室”。
+2. 用户可以选择输入密码或者不设置密码。
+3. 设置好密码后，会弹出一个小窗，用户被要求输入个人“昵称”和“聊天室名称”。
+4. 如果昵称输入为空则初始化一个随机6位字符串。
+5. 若聊天室名称输入为空，则初始化为“聊天室+房主IP”这一字符串。
+6. 输入完毕后就进入到聊天室窗口内。
+
 #### 3.2.2.用户加入聊天室
+
+*业务流程：
+
+1. 系统会维护一个“当前局域网内存在的聊天室”列表，用户可以选择任意一个点击。
+2. 如果该房间有密码，则会跳出一个小窗要求输入密码。
+3. 若没有密码或者密码验证成功，则跳出小窗要求用户输入“昵称”。
+4. 如果昵称输入为空则初始化一个随机6位字符串。
+5. 输入完毕后用户进入到聊天室界面。
 
 ### 3.3.聊天室内功能
 
 #### 3.3.1.发送信息
 
-#### 3.3.2.房主禁言/踢出用户
+*业务流程：
+
+1. 在聊天室页面的中间有聊天输入框，用户可以在此输入文本或者表情。
+2. 输入完毕后，用户可以点击右边的“确认”或者键盘输入“回车”即可发送内容到聊天室。
+3. 用户还可以点击“文件发送”按键，之后会弹出一个小窗，。
+4. 用户可以在这个小窗内上传“图片，音频，视频”这三种类型的文件进行发送。
+
+#### 3.3.2.投票踢出用户
+
+*业务流程：
+
+1. 所有用户都可以使用聊天室右上角的“投票踢出”功能。
+2. 点击之后会弹出一个小窗，用户可以选择当前聊天室内的任意一名用户。
+3. 之后系统会开启一个投票功能，其他用户可以选择“赞成/反对”。
+4. 如果赞成数超过当前聊天室的半数用户以上即可将该用户从当前房间踢出。
 
 #### 3.3.3.用户收藏信息
+
+*业务流程：
+
+1. 用户可以右键任意一条信息，然后会出现“收藏”选项。
+2. 当用户收藏信息后，该条信息的内容会保存在该用户的本地文件内。
+
+#### 3.3.4.退出群聊
+
+*业务流程：
+
+1. 当用户点击窗口的关闭按键后，会弹出一个小窗。
+2. 小窗会显示两个选项“确认”或“取消”。
+3. 若选择“取消”按键，则关闭窗口返回聊天室界面。
+4. 若选择“确定”按键，则视为该用户退出聊天室并关闭页面。
 
 ## 4.产品功能设计
 
