--- a/产品功能设计报告.md
+++ b/产品功能设计报告.md
@@ -14,7 +14,7 @@
 | :-----: | :--: | :------------------: | :----------------------------------: |
 | 4月12日 | V1.0 | 初版产品功能设计设想 |         相信光的CS209 group2         |
 | 4月13日 | V1.5 |    框架内容的补全    | 痛恨乱闯学校的人类幼崽的CS209 group2 |
-|         |      |                      |                                      |
+| 4月14日 | V1.5.1| adding activity diagrams(3.1-3.2)|     CS209 group2 GanLiu           |
 |         |      |                      |                                      |
 |         |      |                      |                                      |
 
@@ -54,7 +54,7 @@
 
 给出如下实例图
 
-![image-20240413002024573](/Users/zhuozhuo/Library/Application Support/typora-user-images/image-20240413002024573.png)
+
 
 ### 3.1.用户账户管理
 
@@ -62,7 +62,7 @@
 
 数据流图：
 
-![image-20240413001352033](/Users/zhuozhuo/Library/Application Support/typora-user-images/image-20240413001352033.png)
+![image-20240413001352033](/imgs/3.1.1.jpg)
 
 *业务流程：
 
@@ -81,6 +81,7 @@
 2. 系统将再次提示“是否删除”。
 4. 当用户确认后，系统将删除用户的所有有关信息。
 5. 若取消则返回“Setting”界面。
+ ![image-20240413001352033](/imgs/3.1.2.jpg)
 
 ### 3.2.用户创建或者加入聊天室
 
@@ -94,7 +95,7 @@
 4. 如果昵称输入为空则初始化一个随机6位字符串。
 5. 若聊天室名称输入为空，则初始化为“聊天室+房主IP”这一字符串。
 6. 输入完毕后就进入到聊天室窗口内。
-
+![image-20240413001352033](/imgs/3.2.1.jpg)
 #### 3.2.2.用户加入聊天室
 
 *业务流程：
@@ -104,7 +105,7 @@
 3. 若没有密码或者密码验证成功，则跳出小窗要求用户输入“昵称”。
 4. 如果昵称输入为空则初始化一个随机6位字符串。
 5. 输入完毕后用户进入到聊天室界面。
-
+![image-20240413001352033](/imgs/3.2.2.jpg)
 ### 3.3.聊天室内功能
 
 #### 3.3.1.发送信息
