Completion of the functional design part of the product and UI images. YU

--- a/产品功能设计报告.md
+++ b/产品功能设计报告.md
@@ -2,7 +2,7 @@
 
 **项目名称**：Telegram chatting Room
 
-**摘要**：本文档系统阐述使一台Windows客户端实现一个网络聊天室的开发过程。首先介绍了网络聊天室的基本功能需求，包括用户登录、创建/加入聊天室、消息发送接收等功能。接着详细介绍了在开发过程中所遇到的设计约束条件，如安全性、稳定性、扩展性等方面的考虑。最后，本文档作为将来  和验收的标准，对网络聊天室的功能完整性、性能表现、用户体验等方面提出了具体要求和评估标准。
+**摘要**：本文档系统阐述使一台Windows客户端实现一个网络聊天室的开发过程。首先介绍了网络聊天室的基本功能需求，包括用户登录、创建/加入聊天室、消息发送接收等功能。接着详细介绍了在开发过程中所遇到的设计约束条件，如安全性、稳定性、扩展性等方面的考虑。最后，本文档作为将来测试和验收的标准，对网络聊天室的功能完整性、性能表现、用户体验等方面提出了具体要求和评估标准。
 
 **相关文档**：
 
@@ -44,9 +44,17 @@
 
 ​        由于我们准备赋予该软件较为高度的现实使用意义，所以我们在功能开发，UI设计等方面均参考了现如今体量巨大的聊天软件，例如腾讯QQ和Telegram。可以说在功能设计方面，与以上两款软件高度重合，由于仅作为教育意义而开发，所以无抄袭之意，仅作为参考。
 
+
+
+
+
 ## 2.开发背景
 
 ​       仅作为南方科技大学CS209课程小组合作项目开发，将“Telegram chatting Room”作为一款跳出Java框架外的mini客户端设计，采用cpp Qt作为开发框架，并严格按照工业界软件开发标准进行设计的一款局域网聊天软件。其中涉及到局域网IP连接，信息传输，数据库管理等内容。
+
+
+
+
 
 ## 3.技术业务需求
 
@@ -54,15 +62,13 @@
 
 给出如下实例图
 
-
-
 ### 3.1.用户账户管理
 
 #### 3.1.1.用户登录
 
 数据流图：
 
-![image-20240413001352033](/imgs/3.1.1.jpg)
+![image-20240413001352033](imgs/3.1.1.jpg)
 
 *业务流程：
 
@@ -78,10 +84,15 @@
 *业务流程：
 
 1. 在“Setting”界面，用户可以将界面拉到最底部的“删除用户”并点击。
+
 2. 系统将再次提示“是否删除”。
-4. 当用户确认后，系统将删除用户的所有有关信息。
-5. 若取消则返回“Setting”界面。
- ![image-20240413001352033](/imgs/3.1.2.jpg)
+
+3. 当用户确认后，系统将删除用户的所有有关信息。
+
+4. 若取消则返回“Setting”界面。
+    ![image-20240413001352033](imgs/3.1.2.jpg)
+
+    
 
 ### 3.2.用户创建或者加入聊天室
 
@@ -90,22 +101,35 @@
 *业务流程：
 
 1. 用户可以点击主页内的“创建聊天室”。
+
 2. 用户可以选择输入密码或者不设置密码。
+
 3. 设置好密码后，会弹出一个小窗，用户被要求输入个人“昵称”和“聊天室名称”。
+
 4. 如果昵称输入为空则初始化一个随机6位字符串。
+
 5. 若聊天室名称输入为空，则初始化为“聊天室+房主IP”这一字符串。
+
 6. 输入完毕后就进入到聊天室窗口内。
-![image-20240413001352033](/imgs/3.2.1.jpg)
+  ![image-20240413001352033](imgs/3.2.1.jpg)
+
+  
 #### 3.2.2.用户加入聊天室
 
 *业务流程：
 
 1. 系统会维护一个“当前局域网内存在的聊天室”列表，用户可以选择任意一个点击。
-2. 如果该房间有密码，则会跳出一个小窗要求输入密码。
+
+2. 如果该房间有密码，则在下方输入密码。
+
 3. 若没有密码或者密码验证成功，则跳出小窗要求用户输入“昵称”。
+
 4. 如果昵称输入为空则初始化一个随机6位字符串。
+
 5. 输入完毕后用户进入到聊天室界面。
-![image-20240413001352033](/imgs/3.2.2.jpg)
+  ![image-20240413001352033](imgs/3.2.2.jpg)
+
+  
 ### 3.3.聊天室内功能
 
 #### 3.3.1.发送信息
@@ -113,25 +137,38 @@
 *业务流程：
 
 1. 在聊天室页面的中间有聊天输入框，用户可以在此输入文本或者表情。
+
 2. 输入完毕后，用户可以点击右边的“确认”或者键盘输入“回车”即可发送内容到聊天室。
+
 3. 用户还可以点击“文件发送”按键，之后会弹出一个小窗，。
+
 4. 用户可以在这个小窗内上传“图片，音频，视频”这三种类型的文件进行发送。
+
+   
 
 #### 3.3.2.投票踢出用户
 
 *业务流程：
 
-1. 所有用户都可以使用聊天室右上角的“投票踢出”功能。
-2. 点击之后会弹出一个小窗，用户可以选择当前聊天室内的任意一名用户。
+1. 所有用户都可以使用聊天室的“投票踢出”功能。
+
+2. 右键除自己之外的用户，会弹出窗口询问是否发起移出用户投票。
+
 3. 之后系统会开启一个投票功能，其他用户可以选择“赞成/反对”。
+
 4. 如果赞成数超过当前聊天室的半数用户以上即可将该用户从当前房间踢出。
+
+   
 
 #### 3.3.3.用户收藏信息
 
 *业务流程：
 
 1. 用户可以右键任意一条信息，然后会出现“收藏”选项。
+
 2. 当用户收藏信息后，该条信息的内容会保存在该用户的本地文件内。
+
+   
 
 #### 3.3.4.退出群聊
 
@@ -142,31 +179,31 @@
 3. 若选择“取消”按键，则关闭窗口返回聊天室界面。
 4. 若选择“确定”按键，则视为该用户退出聊天室并关闭页面。
 
+
+
+
+
 ## 4.产品功能设计
 
 ### 4.1创建或加入聊天室界面
-
-(初始界面的UI)
 
 该界面为聊天室初始界面，包含两个选项：加入聊天室和创建聊天室。
 
 #### 4.1.1创建聊天室
 
-（创建room时的UI）
-
-可在输入栏中输入初始化的密码或选择无需密码，点击按钮创建。
+![](imgs\4.1.1.png)可在输入栏中输入初始化的密码或选择无需密码，点击按钮创建。
 
 #### 4.1.2加入聊天室
 
-（选择聊天室时的UI）
+![4.1.2](imgs\4.1.2.png)
 
 界面存在滚动列表，显示出当前局域网下所有聊天室。可选中某一聊天室，输入密码，点击按钮加入。
-
-
 
 #### 4.1.3设置昵称
 
 创建或加入聊天室后弹出设置昵称界面，在输入栏中输入昵称，若空则随机初始化字符串。点击按钮后进入聊天室界面。
+
+![4.1.3](imgs\4.1.3.png)
 
 
 
@@ -174,14 +211,41 @@
 
 聊天室界面仿照主流社交软件设计。
 
+#### 4.2.1聊天室主界面
+
 主要包括聊天室名称，内容显示框，输入栏，成员列表，退出按钮。
 
 聊天室名称为所有成员均可修改。
 
 内容显示框中由自己发送的消息显示于右侧，他人发送的消息显示于左侧，每一条消息上方显示发送者昵称。
 
-输入栏中可以输入发送文字和图片，也可以点击输入栏上方的图标选择发送音频文件等文件。
+输入栏中可以输入发送文字和表情包，也可以点击输入栏上方的图标选择发送图片，音频文件等文件。
 
 成员列表可滚动显示该聊天室所有成员的名单。
 
 点击退出按钮可退出并关闭聊天室界面。
+
+![4.2.1](imgs\4.2.1.png)
+
+#### 4.2.2修改昵称窗口
+
+点击自己的昵称会出现修改昵称窗口，可以输入新昵称。
+
+![4.2.2](imgs\4.2.2.png)
+
+
+
+#### 4.2.3投票移出用户窗口
+
+##### 4.2.3.1发起投票窗口
+
+点击其他用户昵称会出现发起移出用户窗口，可选择发起或者取消。
+
+![4.2.3.1](imgs\4.2.3.1.png)
+
+##### 4.2.3.2投票窗口
+
+在某一用户发起投票后，会对全体用户弹出该窗口，必须选择赞成或者反对。
+
+![4.2.3.2](imgs\4.2.3.2.png)
+
