--- a/产品功能设计报告.md
+++ b/产品功能设计报告.md
@@ -111,9 +111,9 @@
 5. 若聊天室名称输入为空，则初始化为“聊天室+房主IP”这一字符串。
 
 6. 输入完毕后就进入到聊天室窗口内。
-  ![image-20240413001352033](imgs/3.2.1.jpg)
+    ![image-20240413001352033](imgs/3.2.1.jpg)
 
-  
+
 #### 3.2.2.用户加入聊天室
 
 *业务流程：
@@ -127,9 +127,9 @@
 4. 如果昵称输入为空则初始化一个随机6位字符串。
 
 5. 输入完毕后用户进入到聊天室界面。
-  ![image-20240413001352033](imgs/3.2.2.jpg)
+    ![image-20240413001352033](imgs/3.2.2.jpg)
 
-  
+
 ### 3.3.聊天室内功能
 
 #### 3.3.1.发送信息
@@ -189,21 +189,19 @@
 
 该界面为聊天室初始界面，包含两个选项：加入聊天室和创建聊天室。
 
+![4.1](imgs\4.1.png)
+
 #### 4.1.1创建聊天室
 
-![](imgs\4.1.1.png)可在输入栏中输入初始化的密码或选择无需密码，点击按钮创建。
+点击创建聊天室，弹出该界面，在输入栏中输入密码和昵称，若空则随机初始化字符串。点击按钮后进入聊天室界面。
+
+![4.1.1](imgs\4.1.1.png)
 
 #### 4.1.2加入聊天室
 
+界面存在滚动列表，显示出当前局域网下所有聊天室。可选中某一聊天室，弹出该界面，在输入栏中输入密码和昵称，若空则随机初始化字符串。点击按钮后进入聊天室界面。
+
 ![4.1.2](imgs\4.1.2.png)
-
-界面存在滚动列表，显示出当前局域网下所有聊天室。可选中某一聊天室，输入密码，点击按钮加入。
-
-#### 4.1.3设置昵称
-
-创建或加入聊天室后弹出设置昵称界面，在输入栏中输入昵称，若空则随机初始化字符串。点击按钮后进入聊天室界面。
-
-![4.1.3](imgs\4.1.3.png)
 
 
 
