--- a/产品功能设计报告.md
+++ b/产品功能设计报告.md
@@ -252,3 +252,8 @@
 
 ![4.2.3.2](imgs\4.2.3.2.png)
 
+## Other
+
+​        报告UI界面不代表最终成效，现目前在墨刀上的UI界面仅作为第一次报告的展示作用。此外这版UI是参考现如今体量大的聊天客户端进行设计的，UI审美因人而异，但是肯定有改进的地方，我们不会将其作为最终成效。以及老师提到的其他项目痛点例如数据发送和存储等，目前代码仅在框架搭建阶段，遇到实际的技术问题我们可能会进行业务的改动来加以避免，或者迎难而上进行攻克。
+
+​        最终我们一定能交付一个完整度足够高的project，在此感谢老师对我们组的额外关注，同时也请老师不必过多担心我们组。
