Completion of the functional design part of the product and UI images according to the teacher's request. YU

--- a/产品功能设计报告.md
+++ b/产品功能设计报告.md
@@ -194,19 +194,19 @@
 
 该界面为聊天室初始界面，包含两个选项：加入聊天室和创建聊天室。
 
-![4.1](imgs\4.1.png)
+![4.1](imgs/4.1.png)
 
 #### 4.1.1创建聊天室
 
 点击创建聊天室，弹出该界面，在输入栏中输入密码和昵称，若空则随机初始化字符串。点击按钮后进入聊天室界面。
 
-![4.1.1](imgs\4.1.1.png)
+![4.1.1](imgs/4.1.1.png)
 
 #### 4.1.2加入聊天室
 
 界面存在滚动列表，显示出当前局域网下所有聊天室。可选中某一聊天室，弹出该界面，在输入栏中输入密码和昵称，若空则随机初始化字符串。点击按钮后进入聊天室界面。
 
-![4.1.2](imgs\4.1.2.png)
+![4.1.2](imgs/4.1.2.png)
 
 
 
@@ -228,13 +228,13 @@
 
 点击退出按钮可退出并关闭聊天室界面。
 
-![4.2.1](imgs\4.2.1.png)
+![4.2.1](imgs/4.2.1.png)
 
 #### 4.2.2修改昵称窗口
 
 点击自己的昵称会出现修改昵称窗口，可以输入新昵称。
 
-![4.2.2](imgs\4.2.2.png)
+![4.2.2](imgs/4.2.2.png)
 
 
 
@@ -244,13 +244,13 @@
 
 点击其他用户昵称会出现发起移出用户窗口，可选择发起或者取消。
 
-![4.2.3.1](imgs\4.2.3.1.png)
+![4.2.3.1](imgs/4.2.3.1.png)
 
 ##### 4.2.3.2投票窗口
 
 在某一用户发起投票后，会对全体用户弹出该窗口，必须选择赞成或者反对。
 
-![4.2.3.2](imgs\4.2.3.2.png)
+![4.2.3.2](imgs/4.2.3.2.png)
 
 ## Other
 
