--- a/产品功能设计报告.md
+++ b/产品功能设计报告.md
@@ -144,8 +144,8 @@
 
 4. 用户可以在这个小窗内上传“图片，音频，视频”这三种类型的文件进行发送。
 
-    ![image](https://github.com/we-are-Zed/java2/assets/150674683/7a940256-3561-4630-9ee2-df1c90dad852)
-    ![image](https://github.com/we-are-Zed/java2/assets/150674683/21457121-125c-4a0f-8a77-aadd973e4f48)
+    ![image](imgs/3.3.1.1.png)
+    ![image](imgs/3.3.1.2.png)
 
 
 #### 3.3.2.投票踢出用户
@@ -160,7 +160,7 @@
 
 4. 如果赞成数超过当前聊天室的半数用户以上即可将该用户从当前房间踢出。
 
-   ![image](https://github.com/we-are-Zed/java2/assets/150674683/474bc8c2-c0d2-4bfd-8a6c-bc1092366bff)
+   ![image](imgs/3.3.2.png)
 
 
 #### 3.3.3.用户收藏信息
@@ -171,7 +171,7 @@
 
 2. 当用户收藏信息后，该条信息的内容会保存在该用户的本地文件内。
 
-   ![image](https://github.com/we-are-Zed/java2/assets/150674683/1ee958a0-70be-403c-a341-c72b0a440bea)
+   ![image](imgs/3.3.3.png)
 
 
 #### 3.3.4.退出群聊
@@ -183,7 +183,7 @@
 3. 若选择“取消”按键，则关闭窗口返回聊天室界面。
 4. 若选择“确定”按键，则视为该用户退出聊天室并关闭页面。
 
-    ![image](https://github.com/we-are-Zed/java2/assets/150674683/20d1b9d5-6d86-4c0e-88c0-095bfaa05420)
+    ![image](imgs/3.3.4.png)
 
 
 
