Modification of the data storage design document. YU

--- a/docs/reports/网络聊天室数据储存设计.md
+++ b/docs/reports/网络聊天室数据储存设计.md
@@ -10,13 +10,13 @@
 
 **修改记录：**
 
-| **日期** | **版本** | **说明**         | **作者** |
-| -------- | -------- | ---------------- | -------- |
-| 2024/5/4 | V1.0     | 数据储存设计草稿 | Yu       |
-|          |          |                  |          |
-|          |          |                  |          |
-|          |          |                  |          |
-|          |          |                  |          |
+| **日期**  | **版本** | **说明**         | **作者** |
+| --------- | -------- | ---------------- | -------- |
+| 2024/5/4  | V1.0     | 数据储存设计草稿 | YU Siyao |
+| 2024/5/19 | V2.0     | 数据储存设计定稿 | YU Siyao |
+|           |          |                  |          |
+|           |          |                  |          |
+|           |          |                  |          |
 
 ## 1 简介
 
@@ -44,7 +44,7 @@
 
 ### 2.1概念模型
 
-![image-20240504164101433](C:\Users\31673\AppData\Roaming\Typora\typora-user-images\image-20240504164101433.png)
+<img src="C:\Users\31673\AppData\Roaming\Typora\typora-user-images\image-20240504164101433.png" alt="image-20240504164101433" style="zoom: 50%;" />
 
 但是在实际应用上，由于本机用户的ip唯一，不需要得知他人ip，不需要保存全部聊天室信息，所以只需将文本记录以json文件写入用户本地，并将图片音频视频文件写入本地即可。
 
@@ -52,7 +52,7 @@
 
 ### 2.2逻辑模型
 
-![](imgs/data_structure/img.png)
+<img src="../../imgs/data_structure/img.png" style="zoom: 33%;" />
 
 
 
@@ -66,11 +66,11 @@ eg: index.json
   "chatrooms": [
   {
     "chatroom_id": "chatroom-1234",
-    "path": "~/.cache/chatroom-1234.json"
+    "path": "~/.cache/chatroom-1234/chatroom-1234.json"
 
   },{
     "chatroom_id": "chatroom-foo",
-    "path": "~/.cache/chatroom-foo.json"
+    "path": "~/.cache/chatroom-foo/chatroom-foo.json"
   }
   ]
 }
@@ -108,7 +108,7 @@ eg: chatroom-1234.json
         },
         "type": "audio",
         "content": {
-          "url": "file:///home/.foo/bar.flac",
+          "url": "file:~/.cache/chatroom-1234/bar.flac",
           "description": "An local store file"
         }
       }
@@ -151,7 +151,7 @@ eg: chatroom-1234-members.json
 
 server 端数据结构由于不需要持久化存储，固直接给出 C++ 类定义
 
-```cpp
+```c++
 struct Client{
   size_t userID;
   std::string username;
@@ -217,11 +217,13 @@ std::unordered_map<std::string, ChatRoom> chatrooms; // 维护在线房间
 
 ### 4.1聊天记录文件
 
-- **文件命名约定**：`chatroomName.json`
+- **文件命名约定**：`chatroom-name.json`
   
-  - `chatroomName`：聊天记录属于的聊天室。
+  - `name`：聊天记录属于的聊天室。
   
 - **文件格式**：JSON (JavaScript Object Notation)
+
+- **文件路径**: `~/.cache/chatroom-name/chatroom-name.json`
 
 - **存储内容**：聊天记录的序列化表示，包括但不限于以下字段：
   
@@ -251,9 +253,10 @@ std::unordered_map<std::string, ChatRoom> chatrooms; // 维护在线房间
 
 ### 4.2聊天室成员文件
 
-- **文件命名约定**：`chatroomName.json`
-  - `chatroomName`：聊天记录属于的聊天室。
+- **文件命名约定**：`chatroom-name-member.json`
+  - `name`：聊天记录属于的聊天室。
 - **文件格式**：JSON (JavaScript Object Notation)
+- **文件路径**: `~/.cache/chatroom-name/chatroom-name-number.json`
 - **存储内容**：聊天记录的序列化表示，包括但不限于以下字段：
   - `name`: 聊天室的名称。
   - `participants` 是一个数组，列出了所有参与特定聊天室的用户。
@@ -262,6 +265,14 @@ std::unordered_map<std::string, ChatRoom> chatrooms; // 维护在线房间
     - `user_id`: 用户的唯一标识符。`
     - `username`: 用户的名称或昵称。
     - `ip`: 用户的 IP 地址，这可能用于标识用户的网络位置，尤其是在聊天室环境中。
+
+
+
+### 4.3聊天中产生的文件
+
+- 聊天中发送的文件通过`url`表示，可为本地路径。
+- 若为本地路径，则遵循以下规则
+  - **文件路径**: `~/.cache/chatroom-name/name`
 
 
 
