--- a/docs/reports/产品功能设计报告.md
+++ b/docs/reports/产品功能设计报告.md
@@ -68,7 +68,7 @@
 
 数据流图：
 
-![image-20240413001352033](imgs/3.1.1.jpg)
+![image-20240413001352033](../../imgs/3.1.1.jpg)
 
 *业务流程：
 
@@ -90,7 +90,7 @@
 3. 当用户确认后，系统将删除用户的所有有关信息。
 
 4. 若取消则返回“Setting”界面。
-    ![image-20240413001352033](imgs/3.1.2.jpg)
+    ![image-20240413001352033](../../imgs/3.1.2.jpg)
 
     
 
@@ -111,7 +111,7 @@
 5. 若聊天室名称输入为空，则初始化为“聊天室+房主IP”这一字符串。
 
 6. 输入完毕后就进入到聊天室窗口内。
-    ![image-20240413001352033](imgs/3.2.1.jpg)
+    ![image-20240413001352033](../../imgs/3.2.1.jpg)
 
 
 #### 3.2.2.用户加入聊天室
@@ -127,7 +127,7 @@
 4. 如果昵称输入为空则初始化一个随机6位字符串。
 
 5. 输入完毕后用户进入到聊天室界面。
-    ![image-20240413001352033](imgs/3.2.2.jpg)
+    ![image-20240413001352033](../../imgs/3.2.2.jpg)
 
 
 ### 3.3.聊天室内功能
@@ -144,8 +144,8 @@
 
 4. 用户可以在这个小窗内上传“图片，音频，视频”这三种类型的文件进行发送。
 
-    ![image](imgs/3.3.1.1.png)
-    ![image](imgs/3.3.1.2.png)
+    ![image](../../imgs/3.3.1.1.png)
+    ![image](../../imgs/3.3.1.2.png)
 
 
 #### 3.3.2.投票踢出用户
@@ -160,7 +160,7 @@
 
 4. 如果赞成数超过当前聊天室的半数用户以上即可将该用户从当前房间踢出。
 
-   ![image](imgs/3.3.2.png)
+   ![image](../../imgs/3.3.2.png)
 
 
 #### 3.3.3.用户收藏信息
@@ -171,7 +171,7 @@
 
 2. 当用户收藏信息后，该条信息的内容会保存在该用户的本地文件内。
 
-   ![image](imgs/3.3.3.png)
+   ![image](../../imgs/3.3.3.png)
 
 
 #### 3.3.4.退出群聊
@@ -183,7 +183,7 @@
 3. 若选择“取消”按键，则关闭窗口返回聊天室界面。
 4. 若选择“确定”按键，则视为该用户退出聊天室并关闭页面。
 
-    ![image](imgs/3.3.4.png)
+    ![image](../../imgs/3.3.4.png)
 
 
 
@@ -194,19 +194,19 @@
 
 该界面为聊天室初始界面，包含两个选项：加入聊天室和创建聊天室。
 
-![4.1](imgs/4.1.png)
+![4.1](../../imgs/4.1.png)
 
 #### 4.1.1创建聊天室
 
 点击创建聊天室，弹出该界面，在输入栏中输入密码和昵称，若空则随机初始化字符串。点击按钮后进入聊天室界面。
 
-![4.1.1](imgs/4.1.1.png)
+![4.1.1](../../imgs/4.1.1.png)
 
 #### 4.1.2加入聊天室
 
 界面存在滚动列表，显示出当前局域网下所有聊天室。可选中某一聊天室，弹出该界面，在输入栏中输入密码和昵称，若空则随机初始化字符串。点击按钮后进入聊天室界面。
 
-![4.1.2](imgs/4.1.2.png)
+![4.1.2](../../imgs/4.1.2.png)
 
 
 
@@ -228,13 +228,13 @@
 
 点击退出按钮可退出并关闭聊天室界面。
 
-![4.2.1](imgs/4.2.1.png)
+![4.2.1](../../imgs/4.2.1.png)
 
 #### 4.2.2修改昵称窗口
 
 点击自己的昵称会出现修改昵称窗口，可以输入新昵称。
 
-![4.2.2](imgs/4.2.2.png)
+![4.2.2](../../imgs/4.2.2.png)
 
 
 
@@ -244,13 +244,13 @@
 
 点击其他用户昵称会出现发起移出用户窗口，可选择发起或者取消。
 
-![4.2.3.1](imgs/4.2.3.1.png)
+![4.2.3.1](../../imgs/4.2.3.1.png)
 
 ##### 4.2.3.2投票窗口
 
 在某一用户发起投票后，会对全体用户弹出该窗口，必须选择赞成或者反对。
 
-![4.2.3.2](imgs/4.2.3.2.png)
+![4.2.3.2](../../imgs/4.2.3.2.png)
 
 ## Other
 
