--- a/docs/reports/使用说明文档.md
+++ b/docs/reports/使用说明文档.md
@@ -16,11 +16,11 @@
 
 
 ## 目录
- #### 1. 文档简介
- ##### 1.1 目的
- ##### 1.2 范围
- #### 2. 软件简介
- #### 3. 网络聊天室功能
+ ### 1. 文档简介
+ #### 1.1 目的
+ #### 1.2 范围
+ ### 2. 软件简介
+ ### 3. 网络聊天室功能
 <br>
 <br>
 
