--- a/docs/reports/使用说明文档.md
+++ b/docs/reports/使用说明文档.md
@@ -47,31 +47,38 @@
 ## 3. 网络聊天室功能
 ### 3.1 连接到服务器
 用户可通过IP地址连接到服务器。
-
+![image](../../imgs/s1.png)
+![image](../../imgs/s2.png)
 用户在进入程序时会弹出上图对话框，输入服务器地址后，点击【Run】按钮，如果没有连接失败的弹窗弹出，则连接成功。
 
 ### 3.2 创建房间
 用户可在主界面创建自己的聊天室。
-
+![image](../../imgs/s3.png)
 点击【Create】按钮，在对话框中输入房间名称，房间密码，使用者在该房间的用户名，点击【Create Room】按钮，如果出现聊天室界面，则创建成功。
 
 ### 3.3 加入房间
 用户可在主界面加入已有的聊天室。
-
+![image](../../imgs/s7.png)
 点击【Enter】按钮，在对话框中输入房间名称，房间密码，使用者在该房间的用户名，点击【Join】按钮，如果出现聊天室界面，则加入成功。
 
 ### 3.4 发送消息
 用户可在聊天室界面发送信息。
-
+![image](../../imgs/s4.png)
 在下方的可输入区域内输入文字信息，点击【Send】按钮，如果信息出现在聊天室界面内，则发送成功。
 
-### 3.5 导出聊天记录
-用户可在聊天室界面导出当前房间的聊天记录。
+### 3.4 切换聊天室
+用户可在聊天室界面切换聊天室。
+![image](../../imgs/s4.png)
+![image](../../imgs/s5.png)
+在左侧的房间列表点击其他聊天室名字按钮，如果其他聊天室信息出现在聊天室界面内，则发送成功。
 
+### 3.6 导出聊天记录
+用户可在聊天室界面导出当前房间的聊天记录。
+![image](../../imgs/s4.png)
 // todo本地文件截图
 点击【Export】按钮，本地-todo-路径下出现.json文件，即导出成功。
 
-### 3.5 导入聊天记录
+### 3.7 导入聊天记录
 用户可在聊天室界导入存储的聊天记录
-
+![image](../../imgs/s6.png)
 点击【Load】按钮，在对话框中输入需要导入聊天记录的房间名，点击对话框中的【Load】按钮，页面中出现储存的聊天记录，即导入成功。
